@startuml
enum "ShipSegmentState" as C_0014256742677139282670
enum C_0014256742677139282670 {
INTACT
DAMAGED
DESTROYED
}
enum "ShipOrientation" as C_0002579181642537833876
enum C_0002579181642537833876 {
HORIZONTAL
VERTICAL
}
enum "CellVisibilityState" as C_0003333043679234439357
enum C_0003333043679234439357 {
UNKNOWN
BLANK
SHIP
}
enum "Stage" as C_0001935036015363084261
enum C_0001935036015363084261 {
NOT_STARTED
CREATING_FIELD
CREATING_SHIPS
PLACING_SHIPS
PLAYER_TURN
AI_TURN
GAME_OVER
EXIT
}
class "Ship" as C_0014529657433315016423
class C_0014529657433315016423 {
+Ship(int length) : void
+Ship(const Ship & other) : void
+Ship(Ship && other) noexcept : void
+~Ship() : void
..
+operator=(const Ship & other) : Ship &
+operator=(Ship && other) noexcept : Ship &
..
+operator!=(const Ship & other) const : bool
+operator==(const Ship & other) const : bool
..
+getLength() const : size_t
+getSegmentHP(size_t index) const : int
+getSegmentState(size_t index) const : ShipSegmentState
+isAlive() const : bool
+takeDamage(size_t segment_index, int damage) : void
__
-health : size_t
-length : size_t
-segments : Segment *
}
class "Ship::Segment" as C_0000674658759292391449
class C_0000674658759292391449 {
__
+hp : int
+state : ShipSegmentState
}
C_0014529657433315016423 ..> C_0014256742677139282670
C_0014529657433315016423 --> C_0000674658759292391449 : -segments
C_0000674658759292391449 --+ C_0014529657433315016423
C_0000674658759292391449 o-- C_0014256742677139282670 : +state

'Generated with clang-uml, version 0.5.5
'LLVM version clang version 18.1.8
@enduml
